--- a/netauto/templates/base.html
+++ b/netauto/templates/base.html
@@ -8,9 +8,10 @@
 
     <!-- Bootstrap CSS -->
     <link href="{% static 'bootstrap/css/bootstrap.min.css'  %}" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <title>{% block titulo %}Base{% endblock titulo%} </title>
+    <title>{% block titulo %}Bienvenidos{% endblock titulo%} </title>
   </head>
   <body style="background-color: rgb(206, 206, 206);">
+    
     {% block inventario %}
     {% endblock %}
 
