--- a/netauto/templates/base.html
+++ b/netauto/templates/base.html
@@ -12,11 +12,9 @@
   </head>
   <body style="background-color: rgb(206, 206, 206);">
     
-    {% block inventario %}
+    {% block content %}
     {% endblock %}
 
-    {% block tabla_dispositivos %}
-    {% endblock tabla_dispositivos %}
     
     
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
