--- a/netauto/napalmweb/templates/base_app.html
+++ b/netauto/napalmweb/templates/base_app.html
@@ -1,83 +1,53 @@
 {% extends 'base.html'%}
 {% load static %}
 {% block titulo %}Inventario equipos {% endblock titulo %}
-
 {% block content %}
+{% load crispy_forms_tags %}
 <div class="container-lg", style="margin-top: 1cm; background-color: rgb(61, 66, 90);">
     <div class="row">
       <div class="col-md-12">
-        <h3 class="text-info">
-          Napalm GUI example
-        </h3>
+        <h1 class="text-info">
+          Netmiko GUI tool
+        </h1>
       </div>
     </div>
     <div class="row">
-      <div class="col-md-4">
-        <form role="form" method="post">
+      <div class="col-md-3">
+        <form role="form" method="post" action="" class="mt-2 text-white" autocomplete="off">
           {% csrf_token %}
-          {% for field in form %}
-          <div class="form-group", style="color: snow;">
-            <label for="{{ field.id_for_label }}" class=""></label>{{ field.label }}</label>
-              <div>
-                {{ field }}
-              </div>
-          </div>  
-          {% endfor %}
-          <button type="submit" class="btn btn-primary"; style="margin: 0.50;">
+          {{ form | crispy }}
+          <button type="submit" class="btn btn-secondary mt-4">
             Agregar/Editar Dispositivo
           </button>
-          <button type="comando" class="btn btn-primary"; style="margin: 0.50cm;">
-            Enviar comando
-          </button>
         </form>
-      </div>
-      <div class="col-md-8", style="color: wheat; font-size: 2cm"/>
-        <h2>
-          Resultado de comando:
-        </h2>
-        <p>
-            {{ Resultado }}
-        </p>
-        <p>
-          <a class="btn", style="font-size: 0.80cm; color:yellow;" href="#"> informacion: »</a>
-        </p>
-      </div>
     </div>
-  </div>
-<div class="container-lg">
-	<div class="row">
-		<div class="col-md-12">
-			<div class="row">
-				<div class="col-md-12">
-					<table class="table table-dark table-hover">
-                        <thead>
-                            <th>Router IP</th>
-                            <th>Protocolo</th>
-                            <th>Puerto</th>
-                            <th>Usuario</th>
-                            <!--<th>Password</th>-->
-                            <th>Editar</th>
-                            <th>Eliminar</th>
-                            <th>comandos</th>
-                        </thead>
-                        <tbody>
-                            {% for devices in device %}
-                            <tr>
-                                <td>{{ devices.direccionip }}</td>
-                                <td>{{ devices.protocolo }} </td>
-                                <td>{{ devices.puerto }} </td>
-                                <td>{{ devices.usuario }} </td>
-                                <!--<td>{{ devices.password }} </td>-->
-                                <td><a class="badge badge-info" href="{% url 'editarDispositivo' devices.id %}">Editar</a></td> 
-                                <td><a class="badge badge-danger" href="{% url 'eliminarDispositivo' devices.id %}">Eliminar</a></td>
-                                <td><a class="badge badge-info" href="{% url 'comandos' devices.id %}">comandos</a></td>
-                            </tr>
-                            {% endfor %}
-                        </tbody>
-                    </table>
-                </div>
-            </div>
-        </div>
+    <div class="col-md-9">
+      <table class="table table-dark table-hover">
+            <thead>
+                <th>Router IP</th>
+                <th>Protocolo</th>
+                <th>Puerto</th>
+                <th>Usuario</th>
+                <!--<th>Password</th>-->
+                <th>Editar</th>
+                <th>Eliminar</th>
+                <th>comandos</th>
+            </thead>
+            <tbody>
+            {% for devices in device %}
+               <tr>
+                  <td>{{ devices.direccionip }}</td>
+                  <td>{{ devices.protocolo }} </td>
+                  <td>{{ devices.puerto }} </td>
+                  <td>{{ devices.usuario }} </td>
+                  <!--<td>{{ devices.password }} </td>-->
+                  <td><a class="badge badge-info" href="{% url 'editarDispositivo' devices.id %}">Editar</a></td> 
+                  <td><a class="badge badge-danger" href="{% url 'eliminarDispositivo' devices.id %}">Eliminar</a></td>
+                  <td><a class="badge badge-info" href="{% url 'comandos' devices.id %}">comandos</a></td>
+               </tr>
+            {% endfor %}
+            </tbody>
+      </table>
     </div>
 </div>
 {% endblock content %}
