--- a/netauto/napalmweb/templates/comandos.html
+++ b/netauto/napalmweb/templates/comandos.html
@@ -1,18 +1,16 @@
-{% extends 'base.html'%}
+{% extends 'base_layout.html'%}
 {% load static %}
-{% block titulo %}Comandos {% endblock titulo %}
-
 {% block content %}
 <div class="container">
     <div class="row">
         <div class="col-lg-12">
             <div class="mb-3">
-                <a href="{% url 'home' %}" class="btn btn-primary mb-3">Regresar</a>
+                <a href="{% url 'listado' %}" class="btn btn-primary mb-3">Regresar</a>
             </div>
         </div>
     </div>
     <div class="row">
-        <div class="col-lg-12">
+        <div class="col-lg-8">
             <form class="row g-3" method="POST" role="form">
                 {% csrf_token %}
                 <div class="mb-3">
@@ -28,6 +26,9 @@
                 </div>
             </form>
         </div>
+        <div class="col-sm-4">
+            <h1>hola mundo</h1>        
+        </div>
     </div>
     <div class="row">
         <div class="col-lg-12">
@@ -35,6 +36,4 @@
         </div>
     </div>
 </div>
-
-
 {% endblock %}
